# lightfall-vibe

./: LEGAL.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-06-06-vibe-mode.md
docs/superpowers/specs/: 2026-06-06-vibe-mode-design.md
src/lightfall_vibe/: conductor.py  manifest.py  panel.py  settings.py
src/lightfall_vibe/audio/: capture.py  features.py
src/lightfall_vibe/effects/: base.py  pulse.py  spinner.py  theme.py
tests/: test_capture.py  test_conductor.py  test_effects_pulse.py  test_effects_spinner.py  test_effects_theme.py  test_features.py  test_manifest.py  test_panel.py  test_settings.py
