[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "lightfall-vibe"
dynamic = ["version"]
description = "Vibe mode: music-reactive UI effects for Lightfall (demo toy)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "NCS Development Team" }]
dependencies = [
    "lightfall",
    "soundcard>=0.4",
    "numpy>=1.26",
    "pyqtgraph>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-qt>=4.2",
]

[project.entry-points."lightfall.plugins"]
lightfall_vibe = "lightfall_vibe.manifest:manifest"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["src/lightfall_vibe"]
